--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 aiosqlite==0.21.0
 alphashape==1.3.1
+streamlit
+sounddevice
+SpeechRecognition
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
@@ -18,6 +21,7 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.2.1
+PyAudio   
 click-log==0.4.0
 colorama==0.4.6
 courlan==1.3.2
@@ -39,7 +43,6 @@ filelock==3.19.1
 filetype==1.2.0
 frozenlist==1.7.0
 fsspec==2025.7.0
-gandalf==0.1.4
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.179.0
