--- a/requirements.txt
+++ b/requirements.txt
@@ -144,14 +144,12 @@ pylatexenc==2.10
 pyOpenSSL==25.1.0
 pyparsing==3.2.3
 pypdfium2==4.30.0
-pytesseract==0.3.13
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
 python-pptx==1.0.2
 pytz==2025.2
-pywin32==311
 PyYAML==6.0.2
 rank-bm25==0.2.2
 referencing==0.36.2
@@ -186,8 +184,9 @@ tifffile==2025.6.11
 tiktoken==0.11.0
 tld==0.13.1
 tokenizers==0.21.4
-torch==2.8.0
-torchvision==0.23.0
+torch
+
+torchvision
 tqdm==4.67.1
 trafilatura==2.0.0
 transformers==4.55.4
@@ -206,3 +205,6 @@ xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.24.0
+fastapi==0.115.5
+uvicorn[standard]==0.32.0
+gunicorn==23.0.0
